styles/index.css
body{
	overflow: auto;
	background-color: #f5f5f5;
}

body, h1, p, div, li{
	font-family: 'Open Sans', sans-serif;
	margin: 0;
	padding: 0;
}

h2,h3{
	font-weight: lighter;
}

.hidden{
	visibility : hidden;
}

#navbar{
	height: 65px;
	/*background-color: #FF6600;*/
	background-color: #E5E5E5;
	overflow: auto;
	width: 100%;
	padding: 0;
	margin: 0;
	overflow: hidden;
	position: fixed;
}

.left{
	position:absolute;
    left:0;
    width:250px;
}

.center{
	margin: 0;
	text-align: center;
	line-height: 65px;
}


.right{
	position:absolute;
    right:0;
    top:0;
	width: 250px;
	margin-right: 10px;
	margin-top: 20px;
}

#navbar ul{
	list-style-type: none;
    margin-top: 0px;
	/*margin-left: 38.5%;*/
    padding: 0;
}

#navbar li{
	display: inline;
	margin-left: -5px;
}

.middleLinks{
	text-decoration: none;
	width: 100px;
	color: grey;
	display: inline-block;
	background-color: #E5E5E5;
	height: 65px;
	margin-top: -2px;
	border-style: solid;
    border-width: thin;
	border-color: #CECECE;
	margin-right: 3px;	
    transition: all 0.3s ease-in;
    
}

.middleLinks:hover{
	box-shadow: 0 0 5px #000000;
	background-color: #333333;
	color: white;
	text-decoration: none;
}

#social_bar{
	float: right;
}

#social_bar li{
	margin-left: 0px;
}

#nav_name_text{
	font-size: 35px;
	font-style: oblique;
	font-weight: 300;
	float: left;
	margin-top: 5px;
	margin-left: 10px;
}

#mailImage:hover{
	cursor: pointer;
}

#top_section{
	text-align: center;
	background-image: url('images/space.jpg');
	min-height: 600px;
	color: white;
	moz-box-shadow:    inset 0 0 10px #000000;
    -webkit-box-shadow: inset 0 0 10px #000000;
    box-shadow:         inset 0 0 10px #000000;
    overflow: auto;
    text-shadow:2px 2px #222;
    padding-top: 65px;
}

.not_name{
	margin-top: -60px;
	font-size: 55px;
	font-weight: 300;
	font-style: italic;
	font-family: Arial;
}

#hi{
	font-size: 330px;
	margin-top: -30px;
	font-weight: 700;	
} 

#name_text{
	margin-top: 0px;
	font-weight: 400;
	font-size: 35px;
	font-family: 'Calligraffitti', cursive;
}

#thanks{
	margin-top: -10px;
	font-size: 30px;
	font-family: 'Open Sans', sans-serif;
	font-weight: light;
}

#modalSubject, #modalBody{
	width: 80%;
}

#modalSubject{
	margin-bottom: 15px;
}

#modalBody{
	height: 180px;
}

#main_container{
	background-color: #f5f5f5;
	min-height: 1000px;
	text-align: center;
}

.textAreaAHeader{
	font-size: 48px;
	font-family: sans-serif;
	margin-top: 15px;
	margin-bottom: 25px;
}

.textAreaBHeader{
	font-size: 48px;
	font-family: sans-serif;
	padding-top: 30px;
	margin-bottom: 15px;
}

.textAreaA{
	background-color: #4E4E56;
	min-height: 650px;
	color: white;
	moz-box-shadow:    inset 0 0 10px #000000;
   -webkit-box-shadow: inset 0 0 10px #000000;
   box-shadow:         inset 0 0 10px #000000;
   margin-top: -40px;
   overflow: auto;
}

.textAreaB{
	background-color: #f5f5f5
	color: #737373;
    margin-top: -40px;
    min-height: 650px;
    overflow: hidden;
}

#summaryDiv{
	height: 400px;
}

#introInfo p{
	font-size: 18px;
}

#introInfo h2{
	margin-top: -20px;
}

#introInfo h3{
	font-size: 28px;
}

#introInfoList{
	text-align: left;
	width: 55%;		
	margin-left: auto;
	margin-right: auto;
	font-size: 18px;
}

#educationInfo{
	display: inline-block;
}

.educationDiv{
	width: 32%;
	background-color: #00001D;
	height: 500px;
	margin-top: 0px;
	box-shadow: 2px 5px 15px #000;
	display: inline-block;
	overflow: auto;
	margin-left: 5px;
	font-size: 15px;
	vertical-align: top;
}

.educationDiv li{
	text-align: left;
	margin-right: 5px;
}

.educationDiv h2{
	margin-top: 10px;
}

#experienceInfo{
	text-align: left;
}

#experienceInfo ul{
	font-size: 14px;
}

#experienceInfo li{
	padding-top: 4px;
}

#experienceInfo ul ul{
	padding-bottom: 50px;
}

#experienceInfo ul li ul{
	margin-bottom: -20px;
}

#experienceList{
	display: inline-block;
	width: 64%
}

#lastListElements{
	padding-bottom: 0px;
}

#experienceImages{
	display: inline-block;
	width: 30%;
	margin-left: 70px;
	float: right;
	padding-right: 10px;
	margin-top: 25px;
	text-align: center;
}

#projectsInfo{
	width: 64%;
	float: left;
}

#experienceImages img{
	width: 100%;
}

#travelersLogo{
	margin-top: 0px;
}

#ansiLogo{
	height: 120px;
	width: 200px !important;
	margin-top: 17%;
}

#sbuLogo{
	margin-top: 11%;
}

#sbuLogo2{
	width: 100%;
	margin-top: 5%;
}

.googleLogo{
	margin-top: 7%;
	width: 100%;
}

#facebookLogo{
	margin-top: 4%;
	width: 65%;
}

#projectsInfo ul , b{
	text-align: left;
}

#projectsImages{
	width: 25%;
	float: right;
	margin-right: 4%;
}

.nestedList{
	list-style-type: none;
}

.nestedList ul{
	padding-top: 5px;
}

.innerListContainer{
	margin-bottom: 20px;
	font-size: 16px;
}

.innerListContainer span{margin-bottom: 23px;
	margin-top: 10px;
	font-weight: bold;
}

#extraCurrInfo{
	width: 64%;
	float: left;
}

#extraCurrInfo ul, b{
	text-align: left;
}

#extraImages{
	width: 31%;
	float: right;
}

#sbcsLogo{
	width: 100%;
	margin-top: 3%;
}

#scholarsLogo{
	height: 140px;
	width: 72px;
	margin-bottom: 23px;
	margin-top: 10px;
}

#bottom_section{
	background-color: #6B6B6B;
	color: white;
	height: 7%;
	text-align: center;
}

@media only screen 
and (min-device-width : 320px) 
and (max-device-width : 480px) {
	#experienceImages{
		display: none;
	}

	body{
		width: 320px;
	}

	#hi{
		font-size: 50px;
	}

	#top_section, #main_container, #bottom_section, #navbar{
		width: 320px;
	}

	#navbar{
		display: none;
	}

	.center, .right{
		display: none;
	}
}

@media only screen 
and (min-device-width : 768px) 
and (max-device-width : 1024px) {

	#experienceInfo{
		text-align: left;
	}

	#experienceList{
		width: 100%;
	}

	#projectsInfo{
		width: 100%;
	}

	#extraCurrInfo{
		width: 100%;
	}

	#educationDiv{
		height: 500px !important;
	}

	#experienceInfo ul{
		width: 100%;
		padding-bottom: 35px;
	}

	.nestedList{
		font-size: 20px;
	}

	#experienceInfo li{
		text-align: left;
	}

	#main_container img{
		display: none;
	}

	#introInfo ul{
		width: 75%;
	}
}

